convert JSON schema $ref to canonical model ref

--- a/schema/codegen-schema/banking/ach.canonical.yaml
+++ b/schema/codegen-schema/banking/ach.canonical.yaml
@@ -15,4 +15,5 @@ properties:
         kind: string
         required: true
     -   name: bank
-        $ref: canonical://www.boundedinfinity.com/canonical/banking/bank
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/banking/bank
