--- a/schema/codegen-schema/banking/swift.canonical.yaml
+++ b/schema/codegen-schema/banking/swift.canonical.yaml
@@ -3,4 +3,5 @@ description: |
     <p>
         The Society for Worldwide Interbank Financial Telecommunication (SWIFT) number.
     </p>
-$ref: canonical://www.boundedinfinity.com/canonical/banking/bic
+kind: ref
+ref: canonical://www.boundedinfinity.com/canonical/banking/bic
