--- a/schema/codegen-schema/calendar/event.canonical.yaml
+++ b/schema/codegen-schema/calendar/event.canonical.yaml
@@ -9,21 +9,26 @@ properties:
         description: The description of the event
         kind: string
     -   name: start
-        $ref: canonical://www.boundedinfinity.com/canonical/time/timestamp
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/time/timestamp
     -   name: end
-        $ref: canonical://www.boundedinfinity.com/canonical/time/timestamp
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/time/timestamp
     -   name: required
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/people/contact
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/people/contact
     -   name: optional
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/people/contact
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/people/contact
     -   name: notifications
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/calendar/notification
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/calendar/notification
     -   name: visibility
         kind: string
         enum:
@@ -38,7 +43,8 @@ properties:
     -   name: labels
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/label/label
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/label/label
 required:
     - title
     - start
