--- a/schema/codegen-schema/address/internet.canonical.yaml
+++ b/schema/codegen-schema/address/internet.canonical.yaml
@@ -20,4 +20,5 @@ kinds:
             -   name: labels
                 kind: array
                 items:
-                    $ref: canonical://www.boundedinfinity.com/canonical/label/label
+                    kind: ref
+                    ref: canonical://www.boundedinfinity.com/canonical/label/label
