--- a/schema/codegen-schema/banking/account.canonical.yaml
+++ b/schema/codegen-schema/banking/account.canonical.yaml
@@ -16,13 +16,18 @@ properties:
         kind: string
         required: true
     -   name: kind
-        $ref: canonical://www.boundedinfinity.com/canonical/banking/account-type
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/banking/account-type
     -   name: bank-id
-        $ref: canonical://www.boundedinfinity.com/canonical/banking/bank-id
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/banking/bank-id
         required: true
     -   name: bank-info
-        $ref: canonical://www.boundedinfinity.com/canonical/banking/bank
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/banking/bank
     -   name: swift
-        $ref: canonical://www.boundedinfinity.com/canonical/banking/swift
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/banking/swift
     -   name: iban
-        $ref: canonical://www.boundedinfinity.com/canonical/banking/iban
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/banking/iban
