--- a/schema/codegen-schema/data/acro.canonical.yaml
+++ b/schema/codegen-schema/data/acro.canonical.yaml
@@ -13,8 +13,10 @@ properties:
     -   name: dates
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/time/labeled-datetime
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/time/labeled-datetime
     -   name: labels
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/label/label
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/label/label
