--- a/schema/codegen-schema/people/contact.canonical.yaml
+++ b/schema/codegen-schema/people/contact.canonical.yaml
@@ -4,34 +4,41 @@ kind: object
 properties:
     -   name: person
         description: Contact person
-        $ref: canonical://www.boundedinfinity.com/canonical/people/person
+        kind: ref
+        ref: canonical://www.boundedinfinity.com/canonical/people/person
         required: true
     -   name: emails
         description: Email addresses
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/address/email
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/address/email
     -   name: telephone-numbers
         description: Telephone numbers
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/telephone/nanp
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/telephone/nanp
     -   name: mailing-addresses
         description: List of mailing addresses
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/address/mailing
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/address/mailing
     -   name: internet-addresses
         description: List of internet addresses
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/address/internet
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/address/internet
     -   name: employment
         description: Employment
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/people/employment
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/people/employment
     -   name: labels
         kind: array
         items:
-            $ref: canonical://www.boundedinfinity.com/canonical/label/label
+            kind: ref
+            ref: canonical://www.boundedinfinity.com/canonical/label/label
