--- a/schema/codegen-schema/people/pseudonym-type.data.yaml
+++ b/schema/codegen-schema/people/pseudonym-type.data.yaml
@@ -17,16 +17,19 @@
     description: A person's pen name
 -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/nom-de-plume
     title: Nom de plume
-    $ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/pen-name
+    kind: ref
+    ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/pen-name
 -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnal-name
     title: Regnal name
     description: A person's regnal name
 -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnant-name
     title: Regnant name
-    $ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnal-name
+    kind: ref
+    ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnal-name
 -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/reign-name
     title: Reign name
-    $ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/reign-name
+    kind: ref
+    ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/reign-name
 -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/online-name
     title: Online name
     description: A person's online name
